<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddLandmarkFragment">

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="250dp" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/title"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_title"
        android:inputType="textShortMessage"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/description"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_description"
        android:inputType="textLongMessage" />

    <EditText
        android:id="@+id/hint"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_hint"
        android:inputType="textShortMessage" />

    <EditText
        android:id="@+id/difficulty"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="284dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_difficulty"
        android:inputType="number" />

    <Button
        android:id="@+id/createLandmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:enabled="false"
        android:text="@string/action_create_landmark" />

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/divider"-->
<!--        android:text= "@string/divider_text"-->
<!--        android:layout_marginTop="635dp"-->
<!--        android:layout_marginStart="135dp"/>-->

    <Button
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="200dp"
        android:layout_marginTop="490dp"
        android:enabled="true"
        android:text="@string/action_retry" />



</FrameLayout>