<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LandmarkFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/landmark_img"
        android:layout_width="match_parent"
        android:layout_height="269dp"
        android:src="@android:drawable/ic_menu_gallery" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/landmark_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/landmark_title"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/landmark_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000000" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/landmark_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/landmark_description"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:text="@string/landmark_description" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/hintHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/landmark_hint_header"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/landmark_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/landmark_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/landmark_found_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/landmark_hint"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/landmark_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/landmark_hint_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/landmark_found" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"></LinearLayout>

</LinearLayout>